--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ baseurl: '/cv' #change it according to your repository name
 theme_skin: green # blue turquoise green berry orange ceramic
 
 # Tracker
-analytics: UA-83979019-1
+analytics: 
 
 # Sass/SCSS
 sass:
