--- a/_data/data.yml
+++ b/_data/data.yml
@@ -77,8 +77,7 @@ experiences:
 
           - Architected and supported production deployment automation for our global SAAS environment
           - Monitored and troubleshot issues in our global SAAS environment
-          - Supported our geographically dispersed internal engineering team and their development
-environments
+          - Supported our geographically dispersed internal engineering team and their development environments
 
     - role: Senior Infrastructure Security Engineer
       time: April 2016 - April 2017
@@ -94,13 +93,13 @@ environments
           - Worked as a SOC2 analyst by responding and remediating infrastucture security alarms and violations.
           
      - role: Senior Application Engineer
-      time: November 2013 - April 2016 
-      company: Constant Contact, Waltham, MA
-      details: |
-        Constant Contact is a leading small business email marketing platform. 
+       time: November 2013 - April 2016 
+       company: Constant Contact, Waltham, MA
+       details: |
+         Constant Contact is a leading small business email marketing platform. 
         
-        I started as an Application Engineer and was promoted to a senior role within two years. My work
-        here focused on building automation to assist development teams with applicaiton delivery.
+         I started as an Application Engineer and was promoted to a senior role within two years. My work
+         here focused on building automation to assist development teams with applicaiton delivery.
 
           - Extended and supported continous deployment and integration piplelines
           - Scheduled and deploy production code changes
@@ -171,5 +170,5 @@ skills:
       - name: Networking 
         level:
 
-footer: >
+#footer: >
  
