--- a/_data/data.yml
+++ b/_data/data.yml
@@ -16,7 +16,7 @@ sidebar:
     phone: 
     website:  #do not add http://
     linkedin: jamesstallings
-    github: jestallin
+    github:
     gitlab:
     bitbucket:
     twitter: 
@@ -51,7 +51,7 @@ career-profile:
       I want to help build and support the next great software company. 
 
 education:
-    - degree: BS in Management, concentration in Information Systems
+    - degree: BS in Management
       university: University of Massachussetts 
       time: 2002 - 2007
 
@@ -60,10 +60,12 @@ experiences:
       time: August 2018 - Present
       company: Kovarus, San Ramon, CA
       details: |
-        Kovarus is a IT systems integrator focus on application deplivery, cloud automation, and infrastructure optimization. 
-          
+        Kovarus is a IT systems integrator specializing in application delivery, cloud automation, and infrastructure optimization. 
+        
+        My work at Kovarus focused on delivering value to the client. 
+        
           - Provide secure architecture review for client projects
-          - Create best practices and standards around securing CI/CD pipeline
+          - Create best practices and standards for securing a CI/CD pipeline
           - Help deliver IT solutions within a geographically seperated client team
 
     - role: Production Operations Engineer
@@ -73,20 +75,22 @@ experiences:
         IBM Resilient is a strategic business unit within the IBM security division that develops 
         a world class cyber sercurity incident response platform.
         
-        My work at IBM Resilient focused on helping automate and support their SAAS product offering.
+        My work at IBM Resilient focused on automating and supporting deployment and infrastructure
+        for their SAAS product offering.
 
           - Architected and supported production deployment automation for our global SAAS environment
           - Monitored and troubleshot issues in our global SAAS environment
-          - Supported our geographically dispersed internal engineering team and their development environments
+          - Supported our geographically dispersed engineering team and their development environments
 
     - role: Senior Infrastructure Security Engineer
       time: April 2016 - April 2017
       company: EIG/Constant Contact, Waltham, MA
       details: |
-        EIG is one of the worlds largest web hosting companies. They purchased Constant Contact in order
-        to provide a unified marking platform for small to medium businesses. 
+        EIG is one of the worlds largest web hosting companies. They acquired Constant Contact
+        to build a unified marketing platform for small to medium businesses to thrive.
         
-        In this role, I helped support infrastructure security projects and directives. 
+        In this role, I supported infrastructure security projects, directives, and day to
+        day security operations for the business.
         
           - Supported incident response activities for the organization
           - Wrote security policy, standards, and procedures for the organization 
@@ -98,8 +102,8 @@ experiences:
       details: |
         Constant Contact is a leading small business email marketing platform. 
         
-        I started as an Application Engineer and was promoted to a senior role within two years. My work
-        here focused on building automation to assist development teams with applicaiton delivery.
+        I started at Constant Contact as a Application Engineer and was promoted to a senior role within two years. My work
+        focused on building automation to assist development teams with application delivery.
 
           - Extended and supported continous deployment and integration piplelines
           - Scheduled and deploy production code changes
@@ -110,18 +114,18 @@ experiences:
       company: Software Artisans/Riparian Data, Watertown, MA
       details: |
         SoftArtisans specializes in creating enterprise software libraries used to programatically
-        generate Microsoft Office files. Riparian Data was a startup division that focused on 
+        generate Microsoft Office files. Riparian Data was a startup division within the company that focused on 
         intelligently classifying email using a neural network.
         
-        I started at SoftArtisans as a junior system administrator and worked my way up to a
-        systems engineer/IT manager.
+        I started at SoftArtisans as a junior system administrator and was promoted to 
+        systems engineer/IT manager during my tenure.
 
           - Supported Windows networking/server infrastructure and enterprise applications
           - Drove internal company IT projects and technical decisions
           - Supervised and mentored additional IT personnel
 
 projects:
-    title: Key Projects
+    title: Key Projects and Initiatives
     intro: > 
     
     assignments:
@@ -164,11 +168,13 @@ skills:
       - name: Linux
         level: 
 
-      - name: Cloud 
+      - name: Cloud
         level:
         
       - name: Networking 
         level:
+        
+      - name: Virtualization/VMWare/Docker
 
 #footer: >
  
